--- a/FrontEnd/mindsafe/src/app/pacientes/pacientes-alterar-modal/pacientes-alterar.component.html
+++ b/FrontEnd/mindsafe/src/app/pacientes/pacientes-alterar-modal/pacientes-alterar.component.html
@@ -1,1 +1,63 @@
-<p>pacientes-alterar works!</p>
+<h1 mat-dialog-title>Alterar Pacientes</h1>
+<div mat-dialog-content>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>
+        Pacientes que serão modificados
+        <mat-icon class="material-icons" style="margin: 10px 10px;">group</mat-icon>
+      </mat-card-title>
+      <mat-card-subtitle>
+        !!Cuidado, todos os registros receberão os mesmos valores alterados
+      </mat-card-subtitle>
+    </mat-card-header>
+
+    <mat-card-content>
+      <mat-list class="lista-pacientes">
+        <mat-list-item *ngFor="let paciente of pacientes">
+          <span matLine>
+            <strong>Paciente</strong>
+            {{ paciente.nome }}
+          </span>
+          <span matLine>
+            <strong>Sexo</strong>
+            {{ paciente.sexo === 'M' ? 'Masculino' : 'Feminino' }}
+          </span>
+          <span matLine>
+            <strong>{{ paciente.cpfCnpj.length === 14 ? 'CPF' : 'CNPJ' }}</strong>
+            {{ paciente.cpfCnpj }}
+          </span>
+          <span matLine>
+            <strong>Nacionalidade</strong>
+            {{ paciente.nacionalidade }}
+          </span>
+        </mat-list-item>
+      </mat-list>
+    </mat-card-content>
+  </mat-card>
+
+  <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px" [formGroup]="formAlteracaoPacientes">
+    <mat-form-field fxFlex>
+      <mat-select formControlName="nacionalidade" placeholder="Selecionar Pais">
+        <mat-option *ngFor="let pais of paises$ | async" [value]="pais.sigla">
+          {{ pais.nomePais }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field fxFlex>
+      <mat-select formControlName="sexo" placeholder="Selecionar Sexo">
+        <mat-option value="M">Masculino</mat-option>
+        <mat-option value="F">Feminino</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+</div>
+<div fxLayout="row" fxLayoutGap="10px" mat-dialog-actions>
+  <button fxFlex mat-raised-button color="warn" (click)="onDecline()">
+    Cancelar <mat-icon class="material-icons">cancel</mat-icon>
+  </button>
+
+  <button fxFlex mat-raised-button color="primary" (click)="onConfirm()">
+    Alterar <mat-icon class="material-icons">send</mat-icon>
+  </button>
+</div>
