--- a/FrontEnd/mindsafe/src/app/shared/confirm-modal/confirm-modal.component.html
+++ b/FrontEnd/mindsafe/src/app/shared/confirm-modal/confirm-modal.component.html
@@ -2,10 +2,13 @@
 <div mat-dialog-content>
   <p style="text-align: center;">{{ data.texto }}</p>
 </div>
-<div fxLayout="column">
-  <div mat-dialog-actions>
-    <button fxFlex="45%" fxFlex.xs="100%" mat-raised-button color="primary" (click)="onConfirm()">Confirmar</button><br>
-    <button fxFlex="45%" fxFlex.xs="100%" mat-raised-button color="warn" (click)="onDecline()">Cancelar</button>
-  </div>
+<div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px" fxLayoutGap.xs="5px" mat-dialog-actions>
+  <button fxFlex mat-raised-button color="warn" (click)="onDecline()">
+    Cancelar <mat-icon class="material-icons">cancel</mat-icon>
+  </button>
+
+  <button fxFlex mat-raised-button color="primary" (click)="onConfirm()">
+    Alterar <mat-icon class="material-icons">send</mat-icon>
+  </button>
 </div>
 
