--- a/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.html
+++ b/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.html
@@ -16,15 +16,15 @@
     <div class="informacoes-funcionario">
       <mat-card>
         <mat-card-header>
-          <div mat-card-avatar id="avatar"></div>
-          <mat-card-title>Nome do Funcionário</mat-card-title>
-          <mat-card-subtitle>Função do Funcionário</mat-card-subtitle>
+          <img mat-card-avatar [src]="imgUsuario"/>
+          <mat-card-title>{{ funcionario !== null ? funcionario?.nome : 'Informações não retornadas' }}</mat-card-title>
+          <mat-card-subtitle>{{ funcionario !== null ? funcionario.funcao?.nome : '' }}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
-          Text content
+          {{ funcionario !== null ? funcionario?.email : '' }}
         </mat-card-content>
         <mat-card-actions align="end">
-          <button mat-fab color="primary">
+          <button mat-fab color="primary" (click)="openModalInfo()">
             <i class="material-icons">edit</i>
           </button>
         </mat-card-actions>
