--- a/FrontEnd/mindsafe/src/app/menu-sidenav/modal-funcionario/modal-funcionario.component.html
+++ b/FrontEnd/mindsafe/src/app/menu-sidenav/modal-funcionario/modal-funcionario.component.html
@@ -1,13 +1,18 @@
 <h1 mat-dialog-title>Informações Pessoais</h1>
 <div mat-dialog-content>
   <div class="content-avatar">
-    <div class="avatar" [ngStyle]="{'background-image': 'url(' + imgUsuario + ')' }"></div>
+    <div class="avatar" [ngStyle]="{'background-image': 'url(' + imgUsuario + ')' }">
+      <button mat-icon-button class="input-img">
+        <label for="file-input" class="material-icons">edit</label>
+      </button>
+      <input type="file" id="file-input" (change)="onSelectFile($event)" accept="image/png, image/jpeg" style="display: none;">
+    </div>
 
-    <button mat-mini-fab color="warn" [disabled]="funcionario === null || funcionario?.imagem === null">
+    <button mat-mini-fab color="warn" (click)="onRemoveImg()" class="actions" [disabled]="funcionario === null || funcionario?.imagem === null || imgUpload !== null">
       <mat-icon class="material-icons">delete</mat-icon>
     </button>
 
-    <button mat-mini-fab color="primary" [disabled]="funcionario === null">
+    <button mat-mini-fab color="primary" (click)="onUpload()" class="actions" [disabled]="imgUpload === null">
       <mat-icon class="material-icons">add_a_photo</mat-icon>
     </button>
   </div>
