--- a/FrontEnd/mindsafe/src/app/visitas/visitas/visitas.component.html
+++ b/FrontEnd/mindsafe/src/app/visitas/visitas/visitas.component.html
@@ -1,6 +1,13 @@
-<div class="bg-visitas">
-  <h3 class="titulo">Visitas</h3>
+<!--classe que coloca a imagem no topo da pagina-->
+<div class="bg-visitas" ngClass.xs="bg-xs">
+  <h3 class="titulo" ngClass.xs="titulo-xs">Visitas</h3>
+  <div class="overlay" ngClass.xs="overlay-xs">
+    Photo by
+    <a href="https://unsplash.com/@chrisliverani?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="blank">Chris Liverani</a> on
+    <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="blank">Unsplash</a>
+  </div>
 </div>
+
 
 <div style="padding-left: 20px; padding-right: 20px;">
 
