update de icone pesquisa
editado o icone de pesquisa para o de edicao

--- a/FrontEnd/mindsafe/src/app/visitas/visitas/visitas.component.html
+++ b/FrontEnd/mindsafe/src/app/visitas/visitas/visitas.component.html
@@ -61,7 +61,7 @@
         </div>
         <div class="alinhamento direita small-size">
           <button mat-mini-fab color="primary">
-            <i class="material-icons">search</i>
+            <i class="material-icons">edit</i>
           </button>
         </div>
       </mat-list-item>
