alterando algumas configurações base, sem impactos

--- a/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.html
+++ b/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.html
@@ -34,7 +34,7 @@
       <p id="menu-title">MENU</p>
       <div class="divisor-white"></div>
       <mat-nav-list>
-        <a mat-list-item>RESIDÊNCIAS</a>
+        <a mat-list-item [routerLink]="['residencias']">RESIDÊNCIAS</a>
         <a mat-list-item>FAMÍLIAS</a>
         <a mat-list-item [routerLink]="['pacientes']">PACIENTES</a>
         <a mat-list-item>CONTROLE</a>
