--- a/FrontEnd/mindsafe/src/app/visitas/visitas/visitas.component.scss
+++ b/FrontEnd/mindsafe/src/app/visitas/visitas/visitas.component.scss
@@ -12,7 +12,7 @@ mat-card-content h2 {
   padding-top: 1px;
   height: 300px;
   width: 100%;
-  background-image: url('../../../assets/imagens/visitas.jfif');
+  background-image: url('../../../assets/imagens/visitas.jpg');
   background-size: cover;
   background-position: center;
   margin-bottom: 20px;
