--- a/FrontEnd/mindsafe/src/app/pacientes/pacientes/pacientes.component.html
+++ b/FrontEnd/mindsafe/src/app/pacientes/pacientes/pacientes.component.html
@@ -78,7 +78,7 @@
 
     <ng-container matColumnDef="dataNascimento">
       <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
-      <td mat-cell *matCellDef="let paciente"> {{paciente.dataNascimento}} </td>
+      <td mat-cell *matCellDef="let paciente"> {{paciente.dataNascimento | date:'shortDate'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="nacionalidade">
