Criando layout principal da página de controle

--- a/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.scss
+++ b/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.scss
@@ -46,7 +46,7 @@
 /* Tags */
 
 mat-toolbar {
-  position: sticky;
+  position: fixed;
   position: -webkit-sticky; /* For macOS/iOS Safari */
   top: 0; /* Sets the sticky toolbar to be on top */
   z-index: 1000;
