--- a/FrontEnd/mindsafe/src/app/shared/confirm-modal/confirm-modal.component.html
+++ b/FrontEnd/mindsafe/src/app/shared/confirm-modal/confirm-modal.component.html
@@ -8,7 +8,7 @@
   </button>
 
   <button fxFlex mat-raised-button color="primary" (click)="onConfirm()">
-    Alterar <mat-icon class="material-icons">send</mat-icon>
+    Confirmar <mat-icon class="material-icons">send</mat-icon>
   </button>
 </div>
 
