--- a/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.html
+++ b/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.html
@@ -12,7 +12,7 @@
 <mat-sidenav-container>
 
   <mat-sidenav ngClass.xs="sidenav-xs" ngClass.sm="sidenav-sm" ngClass.md="sidenav-md" ngClass.lg="sidenav-lg"
-    class="sidenav" mode="over" #snav>
+    class="sidenav" mode="over" [fixedBottomGap]="'0'" [fixedTopGap]="displayFixedTopGap" [fixedInViewport]="'true'" #snav>
     <div class="informacoes-funcionario">
       <mat-card>
         <mat-card-header>
@@ -34,10 +34,10 @@
       <p id="menu-title">MENU</p>
       <div class="divisor-white"></div>
       <mat-nav-list>
-        <a mat-list-item [routerLink] = "['residencias']">RESIDÊNCIAS</a>
+        <a mat-list-item [routerLink]="['residencias']">RESIDÊNCIAS</a>
         <a mat-list-item>FAMÍLIAS</a>
         <a mat-list-item [routerLink]="['pacientes']">PACIENTES</a>
-        <a mat-list-item>CONTROLE</a>
+        <a mat-list-item [routerLink]="['controle']">CONTROLE</a>
         <a mat-list-item [routerLink]="['visitas']">VISITAS</a>
         <div class="divisor-white"></div>
         <a mat-list-item (click)="sair()">SAIR <i class="material-icons">exit_to_app</i></a>
