--- a/FrontEnd/mindsafe/src/app/visitas/form-visitas/form-visitas.component.html
+++ b/FrontEnd/mindsafe/src/app/visitas/form-visitas/form-visitas.component.html
@@ -30,6 +30,34 @@
 </div>
 
 
+<div class="comparecer-ubs" >
+  <section>
+    <mat-form-field>
+      <mat-label>Data</mat-label>
+      <input matInput [matDatepicker]="dataComparecer" disabled>
+      <mat-datepicker-toggle  [for]="dataComparecer" matSuffix></mat-datepicker-toggle>
+      <mat-datepicker #dataComparecer disabled="false"></mat-datepicker>
+    </mat-form-field>
+
+
+    <form class="agendar" >
+      <label for="data">Data</label>
+      <input type="date" id="data">
+
+      <label for="hora">Hora</label>
+      <input type="time" id="hora">
+
+      <label for="descricao">Descrição</label>
+      <input type="text" id="descricao">
+    </form>
+
+  </section>
+
+
+
+</div>
+
+
 
 
 
