--- a/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.html
+++ b/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.html
@@ -2,7 +2,7 @@
   <button mat-icon-button (click)="snav.toggle()">
     <mat-icon class="material-icons">menu</mat-icon>
   </button>
-  <a [routerLink]="['dashboard']" class="logo-page">
+  <a [routerLink]="['dashboard']" class="logo-page" (click)="snav.toggle()">
     <div class="logo-page">
       <div class="logo"></div>
       <h1 style="margin-left: 10px;">MindSafe</h1>
@@ -34,11 +34,11 @@
       <p id="menu-title">MENU</p>
       <div class="divisor-white"></div>
       <mat-nav-list>
-        <a mat-list-item [routerLink]="['residencias']">RESIDÊNCIAS</a>
+        <a mat-list-item [routerLink]="['residencias']" (click)="snav.toggle()">RESIDÊNCIAS</a>
         <a mat-list-item>FAMÍLIAS</a>
-        <a mat-list-item [routerLink]="['pacientes']">PACIENTES</a>
-        <a mat-list-item [routerLink]="['controle']">CONTROLE</a>
-        <a mat-list-item [routerLink]="['visitas']">VISITAS</a>
+        <a mat-list-item [routerLink]="['pacientes']" (click)="snav.toggle()">PACIENTES</a>
+        <a mat-list-item [routerLink]="['controle']" (click)="snav.toggle()">CONTROLE</a>
+        <a mat-list-item [routerLink]="['visitas']" (click)="snav.toggle()">VISITAS</a>
         <div class="divisor-white"></div>
         <a mat-list-item (click)="sair()">SAIR <i class="material-icons">exit_to_app</i></a>
       </mat-nav-list>
