Modal de cadastrar microárea fianlizada, início modal de vizualização de microáreas, alteração no backend, MicroAreaRepository, MicroAreaService, MicroAreaResource

--- a/FrontEnd/mindsafe/src/app/controle/controle/controle.component.html
+++ b/FrontEnd/mindsafe/src/app/controle/controle/controle.component.html
@@ -57,11 +57,13 @@
       </mat-card-content>
 
       <mat-card-actions align="end">
-        <button mat-icon-button>
+        <button mat-icon-button matTooltip="Cadastrar Microáreas" (click)="abrirModalMicroarea('cadastrar')">
           <mat-icon class="material-icons">add</mat-icon>
         </button>
+
         <span class="espaco"></span>
-        <button mat-icon-button>
+
+        <button mat-icon-button matTooltip="Vizualizar Microáreas" (click)="abrirModalMicroarea('vizualizar')">
           <mat-icon class="material-icons">description</mat-icon>
         </button>
       </mat-card-actions>
@@ -89,7 +91,9 @@
         <button mat-icon-button>
           <mat-icon class="material-icons">add</mat-icon>
         </button>
+
         <span class="espaco"></span>
+
         <button mat-icon-button>
           <mat-icon class="material-icons">description</mat-icon>
         </button>
@@ -118,7 +122,9 @@
         <button mat-icon-button>
           <mat-icon class="material-icons">add</mat-icon>
         </button>
+
         <span class="espaco"></span>
+
         <button mat-icon-button>
           <mat-icon class="material-icons">description</mat-icon>
         </button>
@@ -145,7 +151,9 @@
         <button mat-icon-button>
           <mat-icon class="material-icons">add</mat-icon>
         </button>
+
         <span class="espaco"></span>
+
         <button mat-icon-button>
           <mat-icon class="material-icons">description</mat-icon>
         </button>
@@ -174,7 +182,9 @@
         <button mat-icon-button>
           <mat-icon class="material-icons">add</mat-icon>
         </button>
+
         <span class="espaco"></span>
+
         <button mat-icon-button>
           <mat-icon class="material-icons">description</mat-icon>
         </button>
