--- a/FrontEnd/mindsafe/src/app/controle/medicamentos-modal/cadastrar-medicamento/cadastrar-medicamento.component.html
+++ b/FrontEnd/mindsafe/src/app/controle/medicamentos-modal/cadastrar-medicamento/cadastrar-medicamento.component.html
@@ -12,10 +12,10 @@
 
 </mat-dialog-content>
 
-<mat-dialog-actions fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px" fxLayoutGap.xs="1px">
+<mat-dialog-actions fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px" fxLayoutGap.xs="5px">
   <button color="warn" mat-raised-button matDialogClose fxFlex>
     Cancelar <mat-icon class="material-icons">cancel</mat-icon>
-  </button>
+  </button><br>
 
   <button color="primary" mat-raised-button [disabled]="controlNome.invalid" (click)="cadastrar()" fxFlex>
     Confirmar <mat-icon class="material-icons">send</mat-icon>
