--- a/FrontEnd/mindsafe/src/app/shared/confirm-modal/confirm-modal.component.html
+++ b/FrontEnd/mindsafe/src/app/shared/confirm-modal/confirm-modal.component.html
@@ -5,10 +5,10 @@
     <i class="material-icons">{{ data?.icone }}</i> {{ data?.textoAdicional }}
   </p>
 </div>
-<div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px" fxLayoutGap.xs="5px" mat-dialog-actions>
+<div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px" mat-dialog-actions>
   <button fxFlex mat-raised-button color="warn" (click)="onDecline()">
     Cancelar <mat-icon class="material-icons">cancel</mat-icon>
-  </button>
+  </button><br>
 
   <button fxFlex mat-raised-button color="primary" (click)="onConfirm()">
     Confirmar <mat-icon class="material-icons">send</mat-icon>
