--- a/FrontEnd/mindsafe/src/app/controle/microareas-modal/vizualizar-microareas/vizualizar-microareas.component.scss
+++ b/FrontEnd/mindsafe/src/app/controle/microareas-modal/vizualizar-microareas/vizualizar-microareas.component.scss
@@ -1,18 +1,19 @@
 .colunas {
-  font-size: 12px;
+  padding: 5px 0px;
+  margin: 5px 15px;
+  font-size: 14px;
   font-weight: 500;
-  background-color: #cecece;
-  padding: 10px;
-  border-radius: 10px 10px 0px 0px;
+  color: #8a8a8a;
 }
 
 mat-list-item {
-  margin: 10px 0px;
+  margin: 12px 0px;
 }
 
 mat-list {
-  margin-bottom: 1px;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
-  max-height: 280px;
+  margin-bottom: 1px;
+  padding-bottom: 5px;
+  max-height: 340px;
   overflow-y: auto;
 }
