--- a/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.html
+++ b/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.html
@@ -2,7 +2,7 @@
   <button mat-icon-button (click)="snav.toggle()">
     <mat-icon class="material-icons">menu</mat-icon>
   </button>
-  <a [routerLink]="['dashboard']" class="logo-page" (click)="snav.toggle()">
+  <a [routerLink]="['dashboard']" class="logo-page" (click)="snav.close()">
     <div class="logo-page">
       <div class="logo"></div>
       <h1 style="margin-left: 10px;">MindSafe</h1>
