--- a/FrontEnd/mindsafe/src/app/controle/riscos-modal/vizualizar-riscos/vizualizar-riscos.component.html
+++ b/FrontEnd/mindsafe/src/app/controle/riscos-modal/vizualizar-riscos/vizualizar-riscos.component.html
@@ -9,14 +9,15 @@
 <mat-dialog-content>
   <mat-list>
     <div class="colunas">
-      <span style="margin-right: 165px;">Descrição</span>
-      <span style="margin-right: 70px;">Risco</span>
+      <span style="margin-right: 170px;">Descrição</span>
+      <span style="margin-right: 125px;">Risco</span>
       <span>Pacientes</span>
     </div>
+
     <mat-list-item *ngFor="let element of riscosTot">
-      <div [formGroup]="element.causa" fxLayout="row" fxLayoutGap="10px" style="width: 300px;">
-        <mat-form-field fxFlex="75%">
-          <input matInput formControlName="nome" #nome>
+      <div [formGroup]="element.causa" fxLayout="row" fxLayoutGap="10px" style="width: 360px;">
+        <mat-form-field fxFlex="65%">
+          <input matInput formControlName="nome" (click)="atribuirValidadorAssincrono(element.causa.get('nome'))" #nome>
           <mat-hint align="end">
             {{ nome.value?.length }} / 250
           </mat-hint>
@@ -25,7 +26,7 @@
           </mat-error>
         </mat-form-field>
 
-        <mat-form-field fxFlex="25%">
+        <mat-form-field fxFlex="35%">
           <input matInput type="number" formControlName="risco">
           <mat-error>
             {{ retornarValidacoes(element.causa.get('risco'), 'Risco') }}
@@ -37,11 +38,11 @@
 
       <span style="flex: 1 1 auto;"></span>
 
-      <button mat-icon-button (click)="onDelete(element)">
+      <button matTooltip="Remover Risco" mat-icon-button (click)="onDelete(element)">
         <mat-icon class="material-icons">delete</mat-icon>
       </button>
 
-      <button mat-icon-button (click)="onUpdate(element.causa.value)" [disabled]="element.causa.invalid">
+      <button matTooltip="Editar Risco" mat-icon-button (click)="onUpdate(element.causa.value)" [disabled]="element.causa.invalid">
         <mat-icon class="material-icons">edit</mat-icon>
       </button>
     </mat-list-item>
