Melhorando a estrutura de vizualizar-microareas.component

--- a/FrontEnd/mindsafe/src/app/controle/microareas-modal/vizualizar-microareas/vizualizar-microareas.component.html
+++ b/FrontEnd/mindsafe/src/app/controle/microareas-modal/vizualizar-microareas/vizualizar-microareas.component.html
@@ -1,5 +1,5 @@
 <div style="display: flex; flex-direction: row;">
-  <h1 matDialogTitle>Vizualizar Medicamentos</h1>
+  <h1 matDialogTitle>Vizualizar Microáreas</h1>
   <span style="flex: 1 1 auto;"></span>
   <button matTooltip="Fechar a janela" mat-icon-button matDialogClose>
     <i class="material-icons" style="color: #565656;">close</i>
@@ -9,14 +9,15 @@
 <mat-dialog-content>
   <mat-list>
     <div class="colunas">
-      <span style="margin-right: 80px;">Número</span>
-      <span style="margin-right: 150px;">Bairro</span>
-      <span style="margin-right: 10px;">Pacientes</span>
+      <span style="margin-right: 81px;">Número</span>
+      <span style="margin-right: 152px;">Bairro</span>
+      <span style="margin-right: 160px;">UBS</span>
+      <span style="margin-right: 20px;">Pacientes</span>
       <span>ACS</span>
     </div>
 
     <mat-list-item *ngFor="let element of microareasTot">
-      <div [formGroup]="element.microarea" fxLayout="row" fxLayoutGap="10px" style="width: 300px;">
+      <div [formGroup]="element.microarea" fxLayout="row" fxLayoutGap="10px" style="width: 300px; margin-right: 20px;">
         <mat-form-field fxFlex="40%">
           <input matInput type="number" (click)="atribuirValidadorAssincrono(element.microarea.get('numero'))" formControlName="numero" #numero>
           <mat-error>
@@ -24,16 +25,25 @@
           </mat-error>
         </mat-form-field>
 
-        <mat-form-field fxFlex="60%">
+        <mat-form-field fxFlex>
           <mat-select formControlName="bairro">
             <mat-option *ngFor="let bairro of bairros" [value]="bairro.nome">{{ bairro.nome }}</mat-option>
           </mat-select>
         </mat-form-field>
       </div>
 
-      <span style="margin: 0px 40px;">{{ element.totPacientes }}</span>
+      <div [formGroup]="element.ubs" fxLayout="row" fxLayoutGap="10px">
+        <mat-form-field fxFlex>
+          <mat-select formControlName="nome">
+            <mat-option *ngFor="let element of ubs" [value]="element.nome">{{ element.nome }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
 
-      <span style="margin-right: 40px;">{{ element.funcionarioResponsavel ? element.funcionarioResponsavel?.nome : 'Não Atribuído' }}</span>
+
+      <span style="margin: 0px 40px">{{ element.totPacientes }}</span>
+
+      <span style="margin-right: 40px; width: 100px;">{{ element.funcionarioResponsavel ? element.funcionarioResponsavel?.nome : 'Não Atribuído' }}</span>
 
       <span style="flex: 1 1 auto;"></span>
 
@@ -41,7 +51,7 @@
         <mat-icon class="material-icons">delete</mat-icon>
       </button>
 
-      <button matTooltip="Alterar Microárea" mat-icon-button (click)="onUpdate(element.microarea.value)" [disabled]="element.microarea.invalid">
+      <button matTooltip="Alterar Microárea" mat-icon-button (click)="onUpdate(element)" [disabled]="element.microarea.invalid || element.ubs.invalid">
         <mat-icon class="material-icons">edit</mat-icon>
       </button>
     </mat-list-item>
