--- a/FrontEnd/mindsafe/src/app/controle/microareas-modal/cadastrar-microarea/cadastrar-microarea.component.html
+++ b/FrontEnd/mindsafe/src/app/controle/microareas-modal/cadastrar-microarea/cadastrar-microarea.component.html
@@ -1,7 +1,7 @@
 <h1 matDialogTitle>Adicionar Microárea</h1>
 
 <mat-dialog-content [ngStyle.xs]="{'margin-bottom': '0px'}">
-  <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px" [formGroup]="formMicroarea">
+  <div [formGroup]="formMicroarea" fxLayout="column" fxLayoutGap="10px">
     <mat-form-field fxFlex>
       <input matInput type="number" formControlName="numero" placeholder="Número da microárea">
       <mat-error>
@@ -19,15 +19,26 @@
         {{ retornarValidacoes(formMicroarea.get('bairro'), 'Bairro') }}
       </mat-error>
     </mat-form-field>
+
+    <mat-form-field fxFlex>
+      <mat-select placeholder="Selecionar UBS" [formControl]="controlUbs">
+        <mat-option *ngFor="let ubs of ubs$ | async" [value]="ubs">
+          <span>{{ ubs.nome }}</span>
+        </mat-option>
+      </mat-select>
+      <mat-error>
+        {{ retornarValidacoes(controlUbs, 'UBS') }}
+      </mat-error>
+    </mat-form-field>
   </div>
 </mat-dialog-content>
 
-<mat-dialog-actions align="center" fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px" fxLayoutGap.xs="5px">
+<mat-dialog-actions align="center" fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxLayoutGap="10px" fxLayoutGap.xs="5px">
   <button mat-raised-button color="warn" fxFlex matDialogClose>
     CANCELAR <mat-icon class="material-icons">cancel</mat-icon>
   </button><br>
 
-  <button mat-raised-button color="primary" [disabled]="formMicroarea.invalid" (click)="cadastrar()" fxFlex>
+  <button mat-raised-button color="primary" [disabled]="formMicroarea.invalid || controlUbs.invalid" (click)="cadastrar()" fxFlex>
     CONFIRMAR <mat-icon class="material-icons">send</mat-icon>
   </button>
 </mat-dialog-actions>
