Alteração nas modais de vizualização na área de controle, e término do cadastro de UBS

--- a/FrontEnd/mindsafe/src/app/controle/controle/controle.component.html
+++ b/FrontEnd/mindsafe/src/app/controle/controle/controle.component.html
@@ -119,13 +119,13 @@
       </mat-card-content>
 
       <mat-card-actions align="end">
-        <button mat-icon-button matTooltip="Cadastrar UBS">
+        <button mat-icon-button matTooltip="Cadastrar UBS" (click)="abrirModalUbs('cadastrar')">
           <mat-icon class="material-icons">add</mat-icon>
         </button>
 
         <span class="espaco"></span>
 
-        <button mat-icon-button matTooltip="Vizualizar UBS">
+        <button mat-icon-button matTooltip="Vizualizar UBS" (click)="abrirModalUbs('vizualizar')">
           <mat-icon class="material-icons">description</mat-icon>
         </button>
       </mat-card-actions>
